# 5_lab_Dynamic_WebScrapic_Basics

./: example1.py  example2.py  exploring_elektroda.py  forum.json  pyproject.toml  test.py
